# datacompression

./: .gitignore  CMakeLists.txt
Huffman/: CMakeLists.txt
Huffman/include/: btree.h  commons.h  huffman.h  node.h
Huffman/include/exceptions/: huffman_tree_exception.h  priority_queue_exception.h
Huffman/src/: btree.cpp  commons.cpp  huffman.cpp  huffman_codes.cpp  huffman_codes.h  node.cpp
Huffman/tests/: commons_tests.cpp  huffman_tests.cpp  node_tests.cpp
LZ/: CMakeLists.txt
LZ/src/: main.cpp
include/: lz77.h
src/: lz77.cpp  main.cpp
vs2015/: datacompression.sln  datacompression.vcxproj
vs2015/datacompression/: datacompression.vcxproj
vs2015/huffman/: huffman.vcxproj
vs2015/huffmanTest/: huffmanTest.vcxproj
vs2015/lz/: lz.vcxproj
