cmake_minimum_required(VERSION 2.6)
project(LZ)
FILE(GLOB_RECURSE INC_ALL "include/*.h")
set(HEADERS include /usr/local/include /usr/include ../3rd_party/catch2)
set(SOURCES src/main.cpp src/lz77.cpp)
include_directories(${HEADERS})
add_executable(LZ ${SOURCES} ${INC_ALL})
link_directories(LZ /usr/lib/x86_64-linux-gnu)
target_link_libraries(LZ pthread rt)
target_compile_options(LZ PUBLIC -std=c++17 -g -Wall -pedantic -Wextra -fpermissive)
install(TARGETS LZ DESTINATION build)

